[package]
name = "hello_async"
version = "0.1.0"
authors = ["lyy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aio-bindings = { path = "./aio-bindings" }
tokio = { version = "1.0", features = ["rt", "time", "macros", "sync"] }
futures = "0.3"
